--- a/aci_basic.yml
+++ b/aci_basic.yml
@@ -11,6 +11,8 @@
 
 - hosts: localhost
   vars:
+    aci_host: "apic1.mydomain.com"
+    aci_tenant: "TEST-TN"
   
   tasks:
   - name: "Create VRF"
